RESOLVED FIXED188387
Prevent querying for renderer info for disconnected or uninitialized displays
https://bugs.webkit.org/show_bug.cgi?id=188387
Summary Prevent querying for renderer info for disconnected or uninitialized displays
Justin Fan
Reported 2018-08-07 13:02:20 PDT
Prevent querying for renderer info for disconnected or uninitialized displays
Attachments
Patch (1.68 KB, patch)
2018-08-07 13:05 PDT, Justin Fan
no flags
Justin Fan
Comment 1 2018-08-07 13:03:09 PDT
Justin Fan
Comment 2 2018-08-07 13:05:28 PDT
Sam Weinig
Comment 3 2018-08-07 13:10:00 PDT
Seems like we really need a way to Mock multiple displays.
WebKit Commit Bot
Comment 4 2018-08-07 15:17:33 PDT
Comment on attachment 346724 [details] Patch Clearing flags on attachment: 346724 Committed r234674: <https://trac.webkit.org/changeset/234674>
WebKit Commit Bot
Comment 5 2018-08-07 15:17:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.