Prevent querying for renderer info for disconnected or uninitialized displays https://bugs.webkit.org/show_bug.cgi?id=188387 <rdar://problem/42588769>

Patch by Justin Fan <justin_fan@apple.com> on 2018-08-07
Reviewed by Simon Fraser.

Calling CGL functions with a NULL displayMask crashes the process.

No tests; requires multiple displays.

* platform/mac/PlatformScreenMac.mm:
(WebCore::collectScreenProperties):

Canonical link: https://commits.webkit.org/203500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234674 268f45cc-cd09-0410-ab3c-d52691b4dbfc